# LedgerFlux

./: .coveragerc  .gitignore  AGENTS.md  ARCHITECTURE.md  Dockerfile.common  Dockerfile.gateway  Dockerfile.ingestor  Dockerfile.normalizer  Dockerfile.snapshotter  MINIKUBE_SETUP.md  Makefile  README.md  TESTING.md  build-images.sh  docker-compose.yaml  main.py  prometheus.yml  pyproject.toml  pytest.ini  skaffold.yaml  test.py  test_client.py
.github/: dependabot.yml
.github/workflows/: ci.yml
docker/: Dockerfile.common  Dockerfile.gateway  Dockerfile.ingestor  Dockerfile.normalizer  Dockerfile.snapshotter  build-images.sh  docker-compose.yaml
docs/: ASSESSMENT.md  QUICKSTART.md
grafana/dashboards/: market-data.json  system-health.json
k8s/: namespace.yaml
k8s/infrastructure/: dynamodb.yaml  grafana-dashboards.yaml  grafana.yaml  kustomization.yaml  minio.yaml  nats.yaml  postgres-init.sql  postgres.yaml  prometheus.yaml
k8s/ingress/: ingress.yaml
k8s/jobs/: postgres-cleanup-cronjob.yaml
k8s/services/: config.yaml  gateway-config.yaml  gateway.yaml  ingestor-config.yaml  ingestor.yaml  kustomization.yaml  nats-config.yaml  normalizer-config.yaml  normalizer-statefulset.yaml  normalizer.yaml  snapshotter-config.yaml  snapshotter.yaml
k8s/services/configs/: ingestor.json  nats.json  normalizer.json  snapshotter.json
scripts/: skaffold-prep.sh  test-k8s.sh
services/: __init__.py
services/common/: __init__.py  config.py  metrics.py  models.py  nats.config.json  pg_store.py  schema_history.sql  stream.py  util.py
services/gateway/: __init__.py  app.py  config.json
services/ingestor/: app.py  config.json
services/normalizer/: __init__.py  app.py  config.json
services/snapshotter/: __init__.py  app.py  config.json
tests/: __init__.py  conftest.py
tests/unit/: __init__.py  conftest.py
tests/unit/common/: __init__.py  test_config.py  test_models.py  test_pg_store.py  test_stream.py  test_util.py
tests/unit/gateway/: test_app.py  test_client_conn.py  test_rate_limiter.py
tests/unit/ingestor/: __init__.py  test_app.py  test_transform.py
tests/unit/normalizer/: __init__.py  test_app.py  test_validation.py
tests/unit/snapshotter/: __init__.py  test_app.py
