[project]
name = "ledgerflux"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=24.1.0",
    "asyncio>=4.0.0",
    "fastapi>=0.116.1",
    "ruff>=0.12.11",
    "websockets>=15.0.1",
    "pydantic>=2.0.0",
    "nats-py>=2.0.0",
    "uvicorn>=0.30.0",
    "boto3>=1.34.0",
]
