[project]
name = "ledgerflux"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "websockets>=15.0.1",
    "pydantic>=2.0.0",
    "nats-py>=2.0.0",
    "uvicorn>=0.30.0",
    "psycopg[binary]>=3.2.1",
    "prometheus-client>=0.19.0"
]

[project.optional-dependencies]
dev = [
    "black>=24.10.0",
    "mypy>=1.11.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "pytest-timeout>=2.3.0",
    "freezegun>=1.5.0",
    "httpx>=0.27.0",
    "ruff>=0.12.11",
]
