[project]
name = "ledgerflux"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "websockets>=15.0.1",
    "pydantic>=2.0.0",
    "nats-py>=2.0.0",
    "uvicorn>=0.30.0",
    "psycopg[binary]>=3.2.1",
    "prometheus-client>=0.19.0"
]

[project.optional-dependencies]
dev = [
    "black>=24.10.0",
    "mypy>=1.11.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "pytest-timeout>=2.3.0",
    "freezegun>=1.5.0",
    "httpx>=0.27.0",
    "ruff>=0.12.11",
    "types-psycopg2>=2.9.0",
]

[tool.mypy]
python_version = "3.12"
explicit_package_bases = true
mypy_path = "$MYPY_CONFIG_FILE_DIR"

# Core type checking (enabled)
check_untyped_defs = true
disallow_any_unimported = false
disallow_subclassing_any = false
warn_return_any = false
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true
no_implicit_reexport = true

# Stricter checking (disabled for now - can enable incrementally)
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_calls = false
disallow_any_generics = false

# Allow untyped calls for third-party libraries without stubs
[[tool.mypy.overrides]]
module = [
    "nats.*",
    "prometheus_client.*",
    "psycopg.*",
    "pydantic.*",
    "fastapi.*",
    "uvicorn.*",
    "websockets.*",
]
ignore_missing_imports = true
